# archa-renderer

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/tracy/: CMakeLists.txt
inc/: aligned_allocator.hpp  aligned_vector.hpp  barycentric_coords.hpp  bin.hpp  binner.hpp  bounding_box.hpp  camera.hpp  colour.hpp  config.hpp  constants.hpp  error.hpp  font.hpp  frame_buffer.hpp  game.hpp  image.hpp  intrinsics.hpp  logger.hpp  model.hpp  model_instance.hpp  pixel_processor.hpp  rasteriser.hpp  render_target.hpp  render_triangle.hpp  resource.hpp  resource_cache.hpp  resource_manager.hpp  scene.hpp  texture.hpp  transform.hpp  triangle.hpp  types.hpp  util.hpp  vertex.hpp  viewport.hpp  z_buffer.hpp
src/: CMakeLists.txt  barycentric_coords.cpp  bin.cpp  binner.cpp  bounding_box.cpp  camera.cpp  colour.cpp  error.cpp  font.cpp  frame_buffer.cpp  game.cpp  image.cpp  intrinsics.cpp  logger.cpp  main.cpp  model.cpp  model_instance.cpp  pixel_processor.cpp  rasteriser.cpp  render_target.cpp  texture.cpp  transform.cpp  util.cpp  viewport.cpp  z_buffer.cpp
